# tappy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BADGES.rst  CHANGELOG.md  CITATION.cff  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.rst  ez_setup.py  publish.py  pyproject.toml  setup.cfg  setup.py  tappy.py
.github/workflows/: pypi-package.yml  tests.yml
docs/: CompareTidalFilters.rst  FillMissing.rst  HarmonicAnalysis.rst  TappyDoc.rst  TappyUsersGuide.rst  TidalScience.rst  citation.txt  command_line.rst  conf.py  create_citations.sh  function_summary.rst  index.rst
docs/_build/doctrees/: CompareTidalFilters.doctree  FillMissing.doctree  HarmonicAnalysis.doctree  TappyDoc.doctree  TappyUsersGuide.doctree  TidalScience.doctree  authors.doctree  contributing.doctree  environment.pickle  index.doctree  license.doctree  readme.doctree
docs/_build/html/: .buildinfo  CompareTidalFilters.html  FillMissing.html  HarmonicAnalysis.html  TappyDoc.html  TappyUsersGuide.html  TidalScience.html  authors.html  contributing.html  genindex.html  index.html  license.html  objects.inv  readme.html  search.html  searchindex.js
docs/_build/html/_sources/: HarmonicAnalysis.rst.txt
example/: example.sh  mayport_florida_8720220_data.txt  mayport_florida_8720220_data_def.txt  process_grace.py  sparse.def  tidesandcurrents.def  tridentpier_florida_8721604_datetime.txt.def
src/tappy/: analysis.py  filters.py  prediction.py  tappy.py  utils.py
src/tappy/tappy_lib/: __init__.py  filter.py  parameter_database.py  sparser.py
tappy_lib/: __init__.py  filter.py  parameter_database.py  sparser.py
tappy_lib/pyparsing/: HowToUsePyparsing.html
tests/: 8720218.csv  8720218_wl.csv  predict_def.out  sparse.def  test_tappy.py
