[metadata]
name = tappy
author = Tim Cera, PE
author_email = tim@cerazone.net
version = file: VERSION
description = Command line script and Python library to analyze tidal constituents.
long_description = file: README.rst
url = https://timcera.bitbucket.io/
keywords = time-series tide tidal
license = BSD 3-Clause License
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Science/Research
        Intended Audience :: End Users/Desktop
        Intended Audience :: Developers
        Environment :: Console
        License :: OSI Approved :: BSD License
        Natural Language :: English
        Operating System :: OS Independent
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Topic :: Scientific/Engineering :: Information Analysis
        Topic :: Scientific/Engineering
        Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    documentation = https://timcera.bitbucket.io/tappy/docs/index.html#tappy-documentation,
    github = https://github.com/timcera/tappy,
    bitbucket = https://bitbucket.org/timcera/tappy/src/master/

[options]
zip_safe = False
include_package_data = True
install_requires =
    astronomia
    cltoolbox
    rst2ansi >= 0.1.5
    numpy
    python_version>="3.7.1"
package_dir=
    =src
packages=find:

[options.package_data]
* = *.txt, *.rst
SciencePlots = *.mplstyle

[options.entry_points]
console_scripts =
    tappy = tappy.tappy:main

[options.extras_require]
dev =   black
        cleanpy
        twine
        pytest
        coverage[toml]
        flake8
        pytest-cov
        pytest-mpl
        pre-commit
        black-nbconvert
        blacken-docs
        velin
        isort
        pyroma
        pyupgrade
        commitizen

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tappy.tests*
where=src

[upload_docs]
upload_dir = docs/_build/html

[coverage:run]
relative_files = True
